--- a/packages/flutter_tools/templates/app/lib/main.dart.tmpl
+++ b/packages/flutter_tools/templates/app/lib/main.dart.tmpl
@@ -1,4 +1,27 @@
 import 'package:flutter/material.dart';
+
+{{#withEmptyMain}}
+void main() {
+  runApp(const MainApp());
+}
+
+class MainApp extends StatelessWidget {
+  const MainApp({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return const MaterialApp(
+      debugShowCheckedModeBanner: false,
+      home: Scaffold(
+        body: Center(
+          child: Text('Hello World!'),
+        ),
+      ),
+    );
+  }
+}
+{{/withEmptyMain}}
+{{^withEmptyMain}}
 {{#withPlatformChannelPluginHook}}
 import 'dart:async';
 
@@ -248,3 +271,4 @@ class _MyAppState extends State<MyApp> {
   }
 }
 {{/withFfiPluginHook}}
+{{/withEmptyMain}}
